# Streamlivr-near-smart-contract

./: README.md  neardev  package.json
contract/: Cargo.toml  deploy.sh
contract/neardev/: dev-account  dev-account.env
contract/src/: events.rs  ft_core.rs  internal.rs  lib.rs  metadata.rs  storage.rs
frontend/: package-lock.json  package.json
frontend/.parcel-cache/: 6bac12b34a5035bf  a6c49560dea3583b  cf6c996cba5a43d5  fb1ea35670166a32.txt  lock.mdb
