[package]
name = "stream_livr"
version = "1.0.0"
authors = ["Stremlivr Tech team"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
[dependencies]
near-sdk = "4.0.0"
serde = "1"
serde_json = "1"
near-contract-standards = "4.0.0"


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = []
